//
// Created by Jakub Szwedowicz on 3/23/25.
//

#ifndef CLIENT_H
#define CLIENT_H

class Client {};

#endif // CLIENT_H
