//
// Created by Jakub Szwedowicz on 2/24/25.
//

#ifndef SUPERFOOD_H
#define SUPERFOOD_H
#include "Entity.h"

namespace PacMan {
namespace GameObjects {
namespace Entities {

class SuperFood : public Entity<EntityType::SUPER_FOOD> {};

} // namespace Entities
} // namespace GameObjects
} // namespace PacMan

#endif // SUPERFOOD_H
