@startuml





/' Objects '/

class Client {
}


namespace PacMan {
	namespace Utils {
		abstract class ILogger {
			+ILogger(const std::string& scopeName, LogLevel logLevel)
			+~ILogger()
			+operator==(const ILogger& other) : bool {query}
			#m_logLevel : const LogLevel
			#m_scopeName : const std::string
			#{static} s_logFileName : static std::string
			-{static} s_loggers : static std::unordered_set<ILogger*>
			+{abstract} logCritical(const std::string& message) : void
			+{abstract} logDebug(const std::string& message) : void
			+{abstract} logError(const std::string& message) : void
			+{abstract} logInfo(const std::string& message) : void
			+{abstract} logWarning(const std::string& message) : void
			+{static} setLogFileName(const std::string& logFileName) : void
			+{abstract} shutdown() : void
			+{static} shutdownAll() : void
		}

		class Logger {
			+Logger(const std::string& scopeName, LogLevel logLevel)
			+~Logger()
			-m_logger : std::shared_ptr<spdlog::logger>
			-initLogger() : void
			+logCritical(const std::string& message) : void
			+logDebug(const std::string& message) : void
			+logError(const std::string& message) : void
			+logInfo(const std::string& message) : void
			+logWarning(const std::string& message) : void
			+shutdown() : void
		}

		enum LogLevel {
			DEBUG
			ERROR
			INFO
			WARNING
		}
	}

	namespace Server {
		class Server {
			-m_reqRespHandler : GameMessagesHandlers::ReqRespHandler
			-m_gameHandler : PacMan::GameLogic::GameHandler
			-m_logger : Utils::Logger
			-m_clientServerReqReplSocketAddr : const std::string
			-m_hostIp : const std::string
			- : friend GameMessagesHandlers::ReqRespHandler
			+main() : int
			-m_listenToPlayers : std::atomic_bool
			-m_serverWorking : std::atomic_bool
			-m_startGameCondition : std::condition_variable
			-m_startGameMutex : std::mutex
			-m_gameRunner : std::unique_ptr<PacMan::GameLogic::GameRunner>
			+listenForPlayers() : void
			+loadGame(const std::string& boardName) : void
			+shutdown() : void
			+startGame() : void
		}

		namespace GameMessagesHandlers {
			class ReqRespHandler {
				+ReqRespHandler(Server* server)
				-m_server : Server*
				-m_logger : Utils::Logger
				+handleClientReqRespGetGames(const GameLogic::GameMessages::ClientReqGetGames* clientReq) : zmq::message_t
				+handleReqRepl(const GameLogic::GameMessages::ConnectionMessageHeader* connHeader) : zmq::message_t
			}
		}
	}

	namespace GameObjects {
		class ILevelBuilder {
			+ILevelBuilder()
			+~ILevelBuilder()
			-m_level : std::unique_ptr<Level>
			+release() : std::unique_ptr<Level>
			#reset() : void
			#setBoard(std::unique_ptr<Level::Board_t> board) : void
		}

		class Level {
			+Level()
			+getBoard() : Board_t& {query}
			-m_levelState : LevelState
			+isReady() : bool {query}
			+setBoard(std::unique_ptr<Board_t> board) : bool
			-m_ghosts : std::vector<Entities::Ghost*>
			-m_pacMans : std::vector<Entities::PacMan*>
			-m_board : vector<std::vector<std::unique_ptr<Entities::IEntity>>>
		}

		class LevelBuilderFromFile {
			+LevelBuilderFromFile(const std::string& boardPath)
			-m_boardPath : const std::string&
			-m_logger : mutable Utils::Logger
			-createBoard() : std::unique_ptr<Level::Board_t> {query}
		}

		enum LevelState {
			NOT_READY
			READY
		}

		namespace Entities {
			class Empty {
				+Empty(uint32_t entityId)
			}

			class Entity <template<EntityType ENTITY_TYPE>> {
				+Entity(uint32_t entityId)
				+~Entity()
				+getEntityType() : EntityType {query}
				#m_entityType : const EntityType
			}

			class Food {
				+Food(uint32_t entityId)
			}

			class Ghost {
				+Ghost(uint32_t entityId)
			}

			abstract class IEntity {
				+IEntity(uint32_t entityId)
				+~IEntity()
				+{abstract} getEntityType() : EntityType {query}
				+operator<<(std::ostream& os, const IEntity& entity) : std :: ostream&
				+getEntityId() : uint32_t {query}
				#m_entityId : uint32_t
			}

			class PacMan {
				+PacMan(uint32_t entityId)
			}

			class SuperFood {
				+SuperFood(uint32_t entityId)
			}

			class Wall {
				+Wall(uint32_t entityId)
			}

			enum EntityType {
				BRIDGE
				EMPTY
				FOOD
				GHOST
				PAC_MAN
				SUPER_FOOD
				WALL
			}
		}
	}

	namespace GameLogic {
		class GameHandler {
			+GameHandler()
			-m_logger : Utils::Logger
			-m_logger : Utils::Logger
			-m_logger : Utils::Logger
			-m_logger : Utils::Logger
			-m_logger : Utils::Logger
			-m_possibleBoards : const std::vector<std::string>
			-m_nextGameId : int
			+loadGame(const std::string& boardName) : std::unique_ptr<GameRunner>
		}

		class GameRunner {
			+GameRunner(int gameId, std::unique_ptr<GameObjects::Level> level)
			+startGame() : bool
			-m_gameId : const int
			+getGameId() : int {query}
			-m_level : std::unique_ptr<GameObjects::Level>
		}

		namespace GameMessages {
			enum ConnectionMessageType {
				CONNECT_TO_GAME
				GET_GAMES
			}

			enum GameMessageType {
				ENTITY_COLLISION
				ENTITY_DEATH
				ENTITY_DIRECTION_CHANGE
				ENTITY_SPAWN
				ENTITY_STATE_CHANGE
				FOOD_EATEN
				GAME_CREATED
				GAME_OVER
				GAME_START
			}

			enum MessageSource {
				CLIENT
				SERVER
			}

			enum MessageType {
				CONNECTION_MESSAGE
				GAME_MESSAGE
			}

			class ClientReqGetGames {
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
			}

			class ClientReqGetGames::ClientReplGetGames {
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
				+header : ConnectionMessageHeader
				+gameId : int
			}

			class ConnectionMessageHeader {
				+event : ConnectionMessageType
				+header : MessageHeader
			}

			class GameMessageHeader {
				+event : GameMessageType
				+source : MessageHeader
			}

			class MessageHeader {
				+source : MessageSource
				+event : MessageType
			}

			class Payload {
				+data : std::vector<uint8_t>
			}

			class ServerMessageGameCreated {
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+level : GameObjects::Level
			}

			class ServerMessageGameCreated::ServerMessageGameStarted {
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
			}

			class ServerMessageGameCreated::ServerMessageGameStarted::ServerMessageGameEntityDeath {
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
				+header : GameMessageHeader
			}

			class ServerMessageGameCreated::ServerMessageGameStarted::ServerMessageGameEntityDeath::PlayerMessage {
				+header : GameMessageHeader
			}
		}
	}
}





/' Inheritance relationships '/

PacMan.GameObjects.Entities.Entity <|-- PacMan.GameObjects.Entities.Empty


PacMan.GameObjects.Entities.Entity <|-- PacMan.GameObjects.Entities.Food


PacMan.GameObjects.Entities.Entity <|-- PacMan.GameObjects.Entities.Ghost


PacMan.GameObjects.Entities.Entity <|-- PacMan.GameObjects.Entities.PacMan


PacMan.GameObjects.Entities.Entity <|-- PacMan.GameObjects.Entities.SuperFood


PacMan.GameObjects.Entities.Entity <|-- PacMan.GameObjects.Entities.Wall


PacMan.GameObjects.Entities.IEntity <|-- PacMan.GameObjects.Entities.Entity


PacMan.GameObjects.ILevelBuilder <|-- PacMan.GameObjects.LevelBuilderFromFile


PacMan.Utils.ILogger <|-- PacMan.Utils.Logger





/' Aggregation relationships '/

PacMan.GameLogic.GameMessages.ClientReqGetGames "6" *-- PacMan.GameLogic.GameMessages.ConnectionMessageHeader


PacMan.GameLogic.GameMessages.ClientReqGetGames::ClientReplGetGames "6" *-- PacMan.GameLogic.GameMessages.ConnectionMessageHeader


PacMan.GameLogic.GameMessages.ConnectionMessageHeader *-- PacMan.GameLogic.GameMessages.ConnectionMessageType


PacMan.GameLogic.GameMessages.ConnectionMessageHeader *-- PacMan.GameLogic.GameMessages.MessageHeader


PacMan.GameObjects.Entities.Entity *-- PacMan.GameObjects.Entities.EntityType


PacMan.GameLogic.GameMessages.GameMessageHeader *-- PacMan.GameLogic.GameMessages.GameMessageType


PacMan.GameLogic.GameMessages.GameMessageHeader *-- PacMan.GameLogic.GameMessages.MessageHeader


PacMan.GameObjects.ILevelBuilder o-- PacMan.GameObjects.Level


PacMan.Utils.ILogger o-- PacMan.Utils.ILogger


PacMan.Utils.ILogger *-- PacMan.Utils.LogLevel


PacMan.GameObjects.Level *-- PacMan.GameObjects.LevelState


PacMan.GameLogic.GameMessages.MessageHeader *-- PacMan.GameLogic.GameMessages.MessageSource


PacMan.GameLogic.GameMessages.MessageHeader *-- PacMan.GameLogic.GameMessages.MessageType


PacMan.Server.GameMessagesHandlers.ReqRespHandler o-- PacMan.Server.Server


PacMan.Server.Server *-- PacMan.Server.GameMessagesHandlers.ReqRespHandler


PacMan.GameLogic.GameMessages.ServerMessageGameCreated "6" *-- PacMan.GameLogic.GameMessages.GameMessageHeader


PacMan.GameLogic.GameMessages.ServerMessageGameCreated::ServerMessageGameStarted "6" *-- PacMan.GameLogic.GameMessages.GameMessageHeader


PacMan.GameLogic.GameMessages.ServerMessageGameCreated::ServerMessageGameStarted::ServerMessageGameEntityDeath "6" *-- PacMan.GameLogic.GameMessages.GameMessageHeader


PacMan.GameLogic.GameMessages.ServerMessageGameCreated::ServerMessageGameStarted::ServerMessageGameEntityDeath::PlayerMessage *-- PacMan.GameLogic.GameMessages.GameMessageHeader






/' Nested objects '/

PacMan.GameLogic.GameMessages.ClientReqGetGames +-- PacMan.GameLogic.GameMessages.ClientReqGetGames.ClientReplGetGames


PacMan.GameLogic.GameMessages.ServerMessageGameCreated +-- PacMan.GameLogic.GameMessages.ServerMessageGameCreated.ServerMessageGameStarted




@enduml
